Bug 703113 - Fix overshadowed |pageSize| variable in Connection::initialize.  r=mak.